<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp">

    <!-- Title -->
    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Option"
        android:fontFamily="@font/montserrat_regular2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <!-- Description -->
    <TextView
        android:id="@+id/aboutDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="6dp"
        android:text="@string/about_description"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTitle"
        app:layout_constraintHorizontal_bias="0.5"/>

    <!-- Back Button -->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/back"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_regular2"
        app:layout_constraintTop_toBottomOf="@id/aboutDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>
